# MilishitaVideoParser

./: CMakeLists.txt  README.md  avframes.hpp  circle.hpp  color.hpp  main.cpp  noteParser.cpp  noteParser.hpp  noteParser_CircleSeeker.cpp  noteParser_StripeSeeker.cpp  noteParser_TimeNotes.cpp
MilishitaVideoParser/: Circle.cpp  Circle.hpp  CircleSeeker.cpp  Color.cpp  Color.hpp  MilishitaVideoParser.cpp  StripeSeeker.cpp  TimeNotes.cpp  avframes.hpp  main.cpp  noteParser.cpp  noteParser.hpp  noteParser_CircleSeeker.cpp  noteParser_StripeSeeker.cpp  noteParser_TimeNotes.cpp  noteParser_mm.cpp  notesParser.cpp  notesParser_mm.cpp
MilishitaVideoParser_2m/: noteParser_2m.cpp  notesParser_2m.cpp
MilishitaVideoParser_2p/: noteParser_2p.cpp  notesParser_2p.cpp
MilishitaVideoParser_4m/: noteParser_4m.cpp  notesParser_4m.cpp
